# cuped-vwe-experiments

./: .gitignore  LICENSE  README.md  article_draft.md  pyproject.toml
figures/: correlation_study.csv  power_user_study.csv
scripts/: make_figures.py
src/: estimators.py  simulate.py
